# api/swagger/swagger.yaml
@@ -39,6 +39,8 @@ paths:
     post:
       operationId: create
       description: Add a new book
+      security:
+        - JWT: []
       parameters:
       - name: book
         description: Book properties
@@ -75,10 +77,11 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
-            
     put:
       operationId: update
       description: Update a book
+      security:
+        - JWT: []
       parameters:
       - name: id
         description: Book id
@@ -104,6 +107,8 @@ paths:
     delete:
       operationId: remove
       description: Delite a book by ID
+      security:
+        - JWT: []
       parameters:
       - name: id
         description: Book id
@@ -115,6 +120,43 @@ paths:
           description: Success
           schema:
             $ref: "#/definitions/GeneralResponse"
+         # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /signup:
+    x-swagger-router-controller: auth-controller
+    post:
+      operationId: signup
+      parameters:
+        - name: user
+          in: body
+          description: New User
+          required: true
+          schema:
+            $ref: '#/definitions/User'
+      responses:
+        "200":
+          description: User created
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+         # responses may fall through to errors
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /login:
+    x-swagger-router-controller: auth-controller
+    get:
+      operationId: login
+      security:
+        - Basic: []
+      responses:
+        "200":
+          description: Log In
+          schema:
+            $ref: "#/definitions/Token"
          # responses may fall through to errors
         default:
           description: Error
@@ -156,6 +198,28 @@ definitions:
       - title
       - author
       - year  
+      
+  User:
+    properties:
+      username: 
+        type: string
+      password:
+        type: string
+        format: password
+    required:
+      - username
+      - password
+      
+  Token:
+    properties:
+      user:
+        type: string
+      token:
+        type: string
+    required:
+      - user
+      - token
+          
   GeneralResponse:
     properties:
       message:
@@ -187,3 +251,14 @@ parameters:
     format: int32
     maximum: 100
     minimum: 0
+    
+securityDefinitions:
+  Basic:
+    type: basic
+  JWT:
+    type: apiKey
+    name: Authorization
+    in: header
+
+
+
